<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstActivity">

    <EditText
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/to_text"
            android:hint="@string/to_hint"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="140dp"
            app:layout_constraintBottom_toTopOf="@+id/send_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintVertical_bias="0.301" />

    <EditText
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/from_text"
            android:hint="@string/from_hint"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/send_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.836" />

    <EditText
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/description_text"
            android:hint="@string/description_hint"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            app:layout_constraintTop_toBottomOf="@+id/to_text"
            app:layout_constraintBottom_toTopOf="@+id/from_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:text="@string/send_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.499" />
</androidx.constraintlayout.widget.ConstraintLayout>